chatbox overflow fix

--- a/react-app/src/components/Chat/chat.css
+++ b/react-app/src/components/Chat/chat.css
@@ -14,7 +14,8 @@
     align-self: flex-end;
     width: 100%;
     color: white;
-    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif
+    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    overflow-wrap: break-word;
 }
 .chatcontainer{
     margin-left: 20px;
